<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/light_blue"
    android:padding="20dp">
    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@id/layout_participants"
        android:gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/not_bored"
        android:textSize="40sp"
        android:textColor="@color/standard_blue"
        android:textStyle="bold"

        />
    <LinearLayout
        android:id="@+id/layout_participants"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_start_terms"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/edit_participants"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:inputType="number"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_start_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_participants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
>
        <Button
            android:id="@+id/button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/standard_blue"
            android:padding="14dp"
            android:layout_marginBottom="10dp"
            android:text="@string/start"
            />

        <TextView
            android:id="@+id/text_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textColor="@color/dark_blue"
         />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>