<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"

    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/standard_blue"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activities"
            android:textColor="@color/dark_blue"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_shuffle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:src="@drawable/ic_baseline_shuffle_24"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_education"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_menu">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/education"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_education" />


    <LinearLayout
        android:id="@+id/layout_recreational"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_education">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/recreational"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_recreational" />

    <LinearLayout
        android:id="@+id/layout_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_recreational">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/social"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_social" />

    <LinearLayout
        android:id="@+id/layout_diy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_social">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/diy"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_diy" />


    <LinearLayout
        android:id="@+id/layout_charity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_diy">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/charity"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_charity" />

    <LinearLayout
        android:id="@+id/layout_cooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_charity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/cooking"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_cooking" />

    <LinearLayout
        android:id="@+id/layout_relaxation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_cooking">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/relaxation"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_relaxation" />

    <LinearLayout
        android:id="@+id/layout_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_relaxation">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/music"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_music" />

    <LinearLayout
        android:id="@+id/layout_busywork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_music">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/busywork"
            android:textColor="@color/dark_blue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_arrow_right"
            app:tint="@color/dark_blue" />

    </LinearLayout>

    <View
        android:id="@+id/view_9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/layout_busywork" />


</androidx.constraintlayout.widget.ConstraintLayout>