<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuggestedActivity">

    <LinearLayout
        android:id="@+id/layout_menu_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/standard_blue"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_go_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:src="@drawable/ic_arrow_left"
            app:tint="@color/dark_blue" />

        <TextView
            android:id="@+id/title_suggested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Teste"
            android:textColor="@color/dark_blue"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_suggestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="Frase exemplo"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_menu_suggestion" />

    <LinearLayout
        android:id="@+id/layout_number_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="100dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_suggestion">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_person"
                app:tint="@color/dark_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/participants"
                android:textColor="@color/dark_blue"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_number_participants"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:text="2"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_final_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_number_participants">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_money"
                app:tint="@color/dark_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/price"
                android:textColor="@color/dark_blue"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:text="Teste"
            android:textColor="@color/dark_blue"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button_new_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/standard_blue"
        android:padding="14dp"
        android:text="@string/try_another"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>